; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c_run_timer_softirq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c_run_timer_softirq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.softirq_action = type { i32 }
%struct.tvec_base = type { i32 }

@tvec_bases = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.softirq_action*)* @run_timer_softirq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @run_timer_softirq(%struct.softirq_action* %0) #0 {
  %2 = alloca %struct.softirq_action*, align 8
  %3 = alloca %struct.tvec_base*, align 8
  store %struct.softirq_action* %0, %struct.softirq_action** %2, align 8
  %4 = load i32, i32* @tvec_bases, align 4
  %5 = call %struct.tvec_base* @__get_cpu_var(i32 %4)
  store %struct.tvec_base* %5, %struct.tvec_base** %3, align 8
  %6 = call i32 (...) @hrtimer_run_pending()
  %7 = load i32, i32* @jiffies, align 4
  %8 = load %struct.tvec_base*, %struct.tvec_base** %3, align 8
  %9 = getelementptr inbounds %struct.tvec_base, %struct.tvec_base* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i64 @time_after_eq(i32 %7, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load %struct.tvec_base*, %struct.tvec_base** %3, align 8
  %15 = call i32 @__run_timers(%struct.tvec_base* %14)
  br label %16

16:                                               ; preds = %13, %1
  ret void
}

declare dso_local %struct.tvec_base* @__get_cpu_var(i32) #1

declare dso_local i32 @hrtimer_run_pending(...) #1

declare dso_local i64 @time_after_eq(i32, i32) #1

declare dso_local i32 @__run_timers(%struct.tvec_base*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
